--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,10 @@ body {
 .container {
   max-width: 960px;
   margin: 0 auto;
-  background-image: url(../images/computer-backgrounds.jpg);
+  /* background-image: url(../images/computer-backgrounds.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
@@ -35,10 +35,9 @@ h1 {
   font-family: 'Germania One', cursive;
   font-size: 50px;
   text-align: center;
-  color: pink;
+  color: white;
   margin: 20px 0 10px 0;
   letter-spacing: .15em;
-  background-color: black;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   font-weight: 600;
@@ -47,7 +46,7 @@ h1 {
 h3 {
   font-family: 'Dancing Script', cursive;
   padding: 10px;
-  color: #7CE5B5;
+  color: black;
   text-align: center;
   font-size: 30px;
   font-weight: 600;
@@ -78,11 +77,11 @@ h3 {
 }
 
 header img {
-  width: 400px;
-  height: 400px;
-  margin: 0 auto;
+  width: 300px;
+  height: 300px;
+  margin: 10px;
   display: block;
-  border-radius: 40%;
+  border-radius: 30%;
   /* Firefox */
   -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
   /* Safari+Chrome */
@@ -92,6 +91,12 @@ header img {
   -moz-transition:-moz-transform .15s linear;
   -o-transition:-o-transform .15s linear;
   -webkit-transition:-webkit-transform .15s linear;
+}
+
+header {
+  background-color: #943633;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 #profile:hover {
@@ -156,12 +161,7 @@ margin: 0 auto;
   width: 50%;
 }
 
-footer {
-  background-color: black;
-  }
-
 .end {
-  background-color: black;
   padding: 30px;
   margin: 0 auto;
   text-align: center;
@@ -222,4 +222,17 @@ span {
 }
 #social .fa-envelope {
 	background:#dd4b39;
+}
+
+.projectsimg {
+  width: 250px;
+  text-align: center;
+  align-items: center;
+}
+
+.projects {
+  text-align: center;
+  align-items: center;
+  font-size: 18px;
+  color: white;
 }
