--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Quantico&display=swap');
 
+@import url('https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -19,9 +25,69 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Quantico', sans-serif;
-  color: white;
-  background-color:black;
+  color: aliceblue;
+  font-family: monospace;
+}
+
+.zone {
+  border-radius:4px;
+  transition: all 0.5s linear;
+}
+
+.zone:hover {
+  -webkit-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+  -moz-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+  -o-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+  box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  nav {
+    display: block;
+  }
+  /* aside {
+    display: flex;
+  } */
+  .container {
+    display: flex;
+  }
+  main {
+    flex-basis: 0;
+    flex-grow: 2;
+  }
+
+  aside {
+    display: block;
+    flex-basis: 0;
+    flex-grow: 1;
+  }
+}
+/*
+@media (min-width: 640px) {
+  .container {
+    display: flex;
+  }
+
+  main {
+    flex-basis: 0;
+    flex-grow: 2;
+  }
+
+  aside {
+    display: block;
+    flex-basis: 0;
+    flex-grow: 1;
+  }
+} */
+
+/* @media (min-width: 1024px) {
+  aside {
+    display: flex;
+  }
+} */
+
+nav {
+  background:black;
   background-image:
   radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
   radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
@@ -29,44 +95,64 @@ body {
   radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  width: 100%;
+  font-size: 1.3em;
 }
 
-.container {
-  max-width: 960px;
+nav a {
+  color: #f5f5f6;
+  padding: 1em;
+  text-decoration: none;
+  display: inline-block;
+}
+
+nav a:hover {
+  color: Chocolate;
+  text-decoration: none;
+}
+
+header {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.parallax-window {
+  min-height: 400px;
+  background: transparent;
+  /* width:100%;
+  height:100%; */
+}
+
+.coverText {
+  position: absolute;
+  left: 48.75%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: bold;
+  text-align: center;
+  background: rgba(0,0,0,0.7);
+  border-radius: 1.5em;
   margin: 0 auto;
-  /* background-image: url(../images/computer-backgrounds.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover; */
+  padding: 1.5em;
 }
 
-h1 {
+.coverText > h1 {
   font-size: 60px;
-  font-weight: bold;
-  text-align: center;
-  color: #dd4b39;
-  margin: 10px;
-  padding: 10px;
   letter-spacing: .15em;
-  vertical-align: middle;
+  font-family: 'Germania one';
+  color: Chocolate;
 }
 
-h2 {
-  color: #dd4b39;
-  letter-spacing: .15em;
-  text-align: center;
-  font-weight: bold;
-  margin: 5px;
-  padding: 5px;
-}
-
-h3 {
+.coverText > h3 {
   font-family: 'Dancing Script', cursive;
-  padding: 10px 10px 40px 10px;
-  color: #00aced;
-  text-align: center;
   font-size: 30px;
-  font-weight: bold;
   /* DEMO-SPECIFIC STYLES */
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
@@ -93,267 +179,28 @@ h3 {
   50% { border-color: transparent }
 }
 
-#profile {
-  max-width: 100%;
-  height: auto;
-  margin: 10px;
-  text-align: center;
-  align-items: center;
-  /* Firefox */
-  -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
-  /* Safari+Chrome */
-  -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-  /* Opera */
-  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-  -moz-transition:-moz-transform .15s linear;
-  -o-transition:-o-transform .15s linear;
-  -webkit-transition:-webkit-transform .15s linear;
-}
-
-#profile:hover {
-  content: url(../images/SEI_Rashida_BW.jpg);
-}
-
-header p {
-  margin: 10px;
-  text-align: justify;
-  padding: 10px;
-  font-size: 18px;
-  letter-spacing: 1px;
-}
-
-#info {
-  list-style:none;
-}
-#info {
-  overflow:hidden;
-}
-#info li a{
-  text-decoration:none;
-  color:#000;
-  background:#3B9FB0;
-  display:block;
-  height: 200px;
-  width: 200px;
-  margin: 20px 0 20px 60px;
-  /* Firefox */
-  -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
-  /* Safari+Chrome */
-  -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-  /* Opera */
-  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-  -moz-transition:-moz-transform .15s linear;
-  -o-transition:-o-transform .15s linear;
-  -webkit-transition:-webkit-transform .15s linear;
-  border-radius: 40%;
-}
-
-#info li a:hover,#info li a:focus{
-  -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
-  -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
-  box-shadow:10px 10px 7px rgba(0,0,0,.7);
-  -webkit-transform: scale(1.25);
-  -moz-transform: scale(1.25);
-  -o-transform: scale(1.25);
-  position:relative;
-  z-index:5;
-  cursor: url("../images/icons8-laptop-64.png"), auto;
-}
-
-#info li{
-  margin:1em;
-  float:left;
-}
-
-#info li p{
-font-family:"Reenie Beanie",arial,sans-serif;
-/*font-family: "Raleway", sans-serif;*/
-margin: 0 auto;
-  padding-top: 35px;
-  font-size:25px;
-  font-weight: bold;
-  text-align: center;
-  align-items: center;
-}
-
-#info li img{
-  width: 50%;
-}
-
-.end {
-  padding: 30px;
+.container {
+  max-width: 1280px;
   margin: 0 auto;
-  text-align: center;
+  padding: 0;
+  min-height: 100vh;
+  background: rgba(0,0,0,0.4);
 }
 
-.end p {
-  color: #00aced;
-  font-family: cursive;
-  letter-spacing: 3px;
-  padding: 10px;
-  font-size: 25px;
-  text-align: center;
-  margin: 0 auto;
-  float: left;
+main, aside {
+  padding: 0.5em;
 }
 
-span {
-  color: #dd4b39;
-  font-style: oblique;
+main > h2 {
+  color: Chocolate;
 }
 
-#social {
-	overflow: auto;
+aside > h2 {
+  color: Chocolate;
 }
 
-#social li {
-	list-style-type: none;
-	float: right;
-}
-
-#social li a i {
-	background: #205D7A;
-	color: #fff;
-	width: 40px;
-	height: 40px;
-	border-radius: 20px;
-	font-size: 25px;
-	text-align: center;
-	margin-right: 10px;
-	padding-top: 15%;
-}
-
-#social li a i {
-	transition: all 0.2s ease-in-out;
-}
-#social li a i:hover {
-	opacity: .7;
-}
-
-#social .fa-github {
-	background:#000;
-}
-#social .fa-linkedin {
-	background:#007bb6;
-}
-#social .fa-twitter {
-	background:#00aced;
-}
-#social .fa-envelope {
-	background:#dd4b39;
-}
-
-.projectsimg {
-  width: 250px;
-  height: 200px;
-  margin: 0 auto;
-  text-align: center;
-  align-items: center;
-  border-radius: 5%;
-  vertical-align: top;
-}
-
-.projects {
-  text-align: center;
-  align-items: center;
-  font-size: 18px;
-  color: white;
-  border: 1px solid white;
-  padding: 10px;
-  margin: 10px;
-}
-
-.col-sm-6, .col-sm-8, .col-sm-4 {
-  text-align: center;
-  align-items: center;
-}
-
-.col- a:hover {
-  text-decoration: none;
-}
-
-.projdiv {
-  position: relative;
-  display: inline-block;
-}
-
-.overlay {
-  background:rgba(0,0,0,.7);
-  text-decoration: none;
-  display: none;
-}
-
-.projdiv:hover .overlay {
-  width:100%;
-  height:100%;
-  position:absolute;
-  vertical-align: middle;
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-  padding-top:33%;
-  left:0;
-  display:inline-block;
-  -webkit-box-sizing:border-box;
-  -moz-box-sizing:border-box;
-  box-sizing:border-box;
-}
-
-.overlay a:hover {
-  color: white;
-  background-color: #00aced;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-nav a {
-  color: #dd4b39;
-  padding: 10px;
-  font-size: 20px;
-  text-decoration: none;
-}
-
-nav button {
-  margin: 10px;
-  background-color: black;
-}
-
-nav button:hover {
-  transition: 1s all;
-  background-color: #dd4b39;
-}
-
-nav a:hover {
-  text-decoration: none;
-  transition: 1s all;
-  color: white;
-}
-
-h4 {
-  color: #00aced;
-}
-
-main p {
-  font-size: 15px;
-  letter-spacing: 1px;
-  text-align: justify;
-}
-
-main span {
-  color: orange;
-}
-
-main .projectrow {
-  margin: 5px;
-  padding: 5px;
-}
-
-#about {
-  color: #00aced;
-}
-
-.badge {
-  padding: 10px;
-  margin: 10px;
-  font-size: 14px;
+footer {
+  color: #fff;
+  background-color: #aab2f7;
+  padding: 0.5em;
 }
