--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ main > p, aside > p {
 
 .card > img {
     max-width: 100%;
-    min-height: 300px;
+    min-height: 260px;
     /* height: auto; */
 }
 
@@ -221,6 +221,7 @@ main > p, aside > p {
   -webkit-box-sizing:border-box;
   -moz-box-sizing:border-box;
   box-sizing:border-box;
+  transition: 0.8s all;
 }
 
 .overlay a {
@@ -243,11 +244,11 @@ span {
 }
 
 h2{
-  color: Chocolate;
-  font-family: 'Germania one';
-  font-size: 2rem;
-  padding: 0.1em;
+  background: Chocolate;
   font-weight: bold;
+  font-size: 2rem;
+  border-radius: 0.15em;
+  padding: 0.1em;
   letter-spacing: 0.1em;
 }
 
