--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,20 @@ nav {
   z-index: 1;
   top: 0;
   width: 100%;
-  font-size: 1.3em;
+  padding: 1em;
+}
+
+.nav-icon {
+  padding: 0.5em;
+  font-size: 1em;
+  color: Chocolate;
+  font-weight: bold;
 }
 
 nav a {
+  padding: 0.5em;
+  font-size: 1.3em;
   color: #f5f5f6;
-  padding: 1em;
   text-decoration: none;
   display: inline-block;
 }
@@ -100,6 +108,7 @@ header {
   border-radius: 1.5em;
   margin: 0 auto;
   padding: 1.5em;
+  min-width: 50vh;
 }
 
 .coverText > h1 {
@@ -142,7 +151,7 @@ header {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0;
-  min-height: 100vh;
+  min-height: 80vh;
   background: rgba(0,0,0,0.6);
 }
 
@@ -156,8 +165,8 @@ main > h2, aside > h2 {
   background: rgba(0,0,0,0.7);
   border-radius: 0.15em;
   padding: 0.1em;
-  font-weight: bold;
   letter-spacing: 0.1em;
+  font-weight: bold;
 }
 
 main > p, aside > p {
@@ -175,13 +184,13 @@ main > p, aside > p {
 }
 
 .card {
-    background-color: #444;
+    background: rgba(0,0,0,0.4);
     margin: 20px;
 }
 
 .card > img {
     max-width: 100%;
-    min-height: 260px;
+    min-height: 50vh;
     /* height: auto; */
 }
 
@@ -243,12 +252,16 @@ span {
   color: Chocolate;
 }
 
+/* .skilled {
+  min-height: 60vh;
+} */
+
 h2{
   background: Chocolate;
   font-weight: bold;
   font-size: 2rem;
   border-radius: 0.15em;
-  padding: 0.1em;
+  padding: 0.5em;
   letter-spacing: 0.1em;
 }
 
@@ -258,12 +271,13 @@ h2{
   margin: 0.2em;
 }
 
-/* footer {
-  position: fixed;
+footer {
+  /* position: fixed;
   z-index: 1;
   bottom: 0;
-  width: 100%;
-} */
+  width: 100%; */
+  /* background: Chocolate; */
+}
 
 li {
     padding: 20px;
@@ -319,10 +333,18 @@ footer p {
 @media only screen and (max-width: 600px) {
   nav a {
     display: block;
-    font-size: 0.8em;
+    font-size: 1em;
     padding: 0.2em;
     flex-basis: 0;
     flex-grow: 1;
+  }
+
+  .nav-icon {
+    /* display: block; */
+    font-size: 0.8em;
+    padding: 0.2em;
+    /* flex-basis: 0;
+    flex-grow: 1; */
   }
 
   #social {
@@ -332,10 +354,28 @@ footer p {
 }
 
 @media (min-width: 560px) {
+
+  nav a {
+    display: block;
+    font-size: 1em;
+    padding: 0.2em;
+    flex-basis: 0;
+    flex-grow: 1;
+  }
+
+  .nav-icon {
+    /* display: block; */
+    font-size: 0.8em;
+    padding: 0.2em;
+    /* flex-basis: 0;
+    flex-grow: 1; */
+  }
+
   aside {
-    display: flex;
+    display: block;
   }
 }
+
 
 @media (min-width: 640px) {
   .container {
@@ -354,8 +394,6 @@ footer p {
   }
 }
 
-/* @media (min-width: 1024px) {
-  aside {
-    display: flex;
-  }
-} */
+.scroll-color {
+  color: Chocolate;
+}
