--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,6 @@
   box-sizing: border-box;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -76,11 +72,14 @@ nav a {
   color: #f5f5f6;
   text-decoration: none;
   display: inline-block;
+  transition-duration: 2s;
+  transition: all 0.5s linear;
 }
 
 nav a:hover {
   color: Chocolate;
   text-decoration: none;
+  transform: rotate(-20deg);
 }
 
 header {
@@ -253,17 +252,18 @@ span {
   font-weight: bold;
 }
 
-/* .skilled {
-  min-height: 60vh;
-} */
+.skilled {
+  min-height: 55vh;
+}
 
-h2{
+#scroll {
   background: Chocolate;
   font-weight: bold;
-  font-size: 2rem;
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 35px;
   border-radius: 0.15em;
-  padding: 0.5em;
-  letter-spacing: 0.1em;
+  padding: 0.3em;
+  letter-spacing: 0.2em;
 }
 
 .skill {
@@ -277,10 +277,10 @@ h2{
 }
 
 footer {
-  /* position: fixed;
+  position: fixed;
   z-index: 1;
   bottom: 0;
-  width: 100%; */
+  width: 100%;
   /* background: Chocolate; */
 }
 
@@ -356,6 +356,10 @@ footer p {
     font-size: 0.5em;
     padding: 0;
   }
+
+  .skilled {
+    min-height: 70vh;
+  }
 }
 
 @media (min-width: 560px) and (max-width: 860px) {
@@ -378,6 +382,10 @@ footer p {
 
   aside {
     display: block;
+  }
+
+  .skilled {
+    min-height: 60vh;
   }
 }
 
@@ -413,4 +421,5 @@ footer p {
 
 .scroll-color {
   color: Chocolate;
+  transform: rotate(-20deg);
 }
