--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,20 @@ nav {
   padding: 1em;
 }
 
+/* .sticky {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  width: 100%;
+} */
+
+/* .main-nav, #social {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    font-size: 0.7em;
+} */
+
 .nav-icon {
   padding: 0.5em;
   font-size: 1em;
@@ -74,6 +88,7 @@ nav a {
   display: inline-block;
   transition-duration: 2s;
   transition: all 0.5s linear;
+  /* transition: all 0.2s ease-in-out; */
 }
 
 nav a:hover {
@@ -183,7 +198,7 @@ main > p, aside > p {
 }
 
 .card {
-    background: rgba(0,0,0,0.4);
+    background: rgba(0,0,0,0.1);
     margin: 20px;
 }
 
@@ -201,16 +216,17 @@ main > p, aside > p {
 
 .card p {
     font-size: 1rem;
-    text-align: left;
+    text-align: justify;
+    text-justify: none;
     padding: 0.5em;
 }
 
-.card > .text {
+/* .card > .text {
     padding: 0 20px 20px;
-}
+} */
 
 .overlay {
-  background:rgba(0,0,0,.7);
+  background:rgba(0,0,0,.8);
   text-decoration: none;
   display: none;
 }
@@ -223,7 +239,7 @@ main > p, aside > p {
   color: white;
   text-decoration: none;
   font-weight: bold;
-  padding-top:33%;
+  padding-top:18%;
   left:0;
   display:inline-block;
   -webkit-box-sizing:border-box;
@@ -259,7 +275,7 @@ span {
 #scroll {
   background: Chocolate;
   font-weight: bold;
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.8);
   font-size: 35px;
   border-radius: 0.15em;
   padding: 0.3em;
@@ -284,8 +300,9 @@ footer {
   /* background: Chocolate; */
 }
 
-li {
+ li {
     padding: 20px;
+    margin: auto;
 }
 
 footer p {
@@ -336,8 +353,9 @@ footer p {
 }
 
 @media only screen and (max-width: 560px) {
+
   nav a {
-    display: block;
+    /* display: block; */
     font-size: 1em;
     padding: 0.2em;
     flex-basis: 0;
@@ -348,8 +366,8 @@ footer p {
     /* display: block; */
     font-size: 0.8em;
     padding: 0.2em;
-    /* flex-basis: 0;
-    flex-grow: 1; */
+    flex-basis: 0;
+    flex-grow: 1;
   }
 
   #social {
@@ -365,7 +383,7 @@ footer p {
 @media (min-width: 560px) and (max-width: 860px) {
 
   nav a {
-    display: block;
+    /* display: block; */
     font-size: 1.2em;
     padding: 0.2em;
     flex-basis: 0;
@@ -376,8 +394,8 @@ footer p {
     /* display: block; */
     font-size: 0.9em;
     padding: 0.2em;
-    /* flex-basis: 0;
-    flex-grow: 1; */
+    flex-basis: 0;
+    flex-grow: 1;
   }
 
   aside {
@@ -391,7 +409,7 @@ footer p {
 
 @media (min-width: 860px) {
   nav a {
-    display: block;
+    /* display: block; */
     font-size: 1.5em;
     padding: 0.2em;
     flex-basis: 0;
