--- a/css/style.css
+++ b/css/style.css
@@ -204,21 +204,20 @@ main > p, aside > p {
 
 .card > img {
     max-width: 100%;
-    min-height: 50vh;
-    /* height: auto; */
+    height: auto;
 }
 
 .card h4 {
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     color: Chocolate;
     font-weight: bold;
 }
 
 .card p {
-    font-size: 1rem;
+    font-size: 0.8rem;
     text-align: justify;
     text-justify: none;
-    padding: 0.5em;
+    padding: 0.6em;
 }
 
 /* .card > .text {
@@ -239,7 +238,7 @@ main > p, aside > p {
   color: white;
   text-decoration: none;
   font-weight: bold;
-  padding-top:18%;
+  padding-top: 11%;
   left:0;
   display:inline-block;
   -webkit-box-sizing:border-box;
@@ -250,7 +249,7 @@ main > p, aside > p {
 
 .overlay a {
   color: aliceblue;
-  font-size: 1.5rem;
+  font-size: 1rem;
   padding: 0.2em;
   margin: 0.2em;
   border: 1px solid Chocolate;
@@ -378,6 +377,21 @@ footer p {
   .skilled {
     min-height: 70vh;
   }
+
+  .overlay a {
+    font-size: 1.5rem;
+    padding: 0.2em;
+    margin: 0.2em;
+  }
+
+  .card h4 {
+      font-size: 1.5rem;
+  }
+
+  .card p {
+      font-size: 1rem;
+      padding: 1em;
+  }
 }
 
 @media (min-width: 560px) and (max-width: 860px) {
@@ -406,6 +420,106 @@ footer p {
     min-height: 60vh;
   }
 }
+
+@media (min-width: 560px) and (max-width: 715px) {
+
+  .overlay a {
+    font-size: 1.7rem;
+    padding: 0.2em;
+    margin: 0.2em;
+  }
+
+  .card h4 {
+      font-size: 1.7rem;
+  }
+
+  .card p {
+      font-size: 1.3rem;
+      padding: 1em;
+      line-height: 30px;
+  }
+
+ }
+
+ @media (min-width: 715px) and (max-width: 720px) {
+
+   .overlay a {
+     font-size: 1rem;
+     padding: 0.2em;
+     margin: 0.2em;
+   }
+
+   .card h4 {
+       font-size: 1rem;
+   }
+
+   .card p {
+       font-size: 0.8rem;
+       padding: 0.8em;
+       line-height: 20px;
+   }
+
+ }
+
+ @media (min-width: 860px) and (max-width: 930px) {
+
+   .overlay a {
+     font-size: 1.3rem;
+     padding: 0.2em;
+     margin: 0.2em;
+   }
+
+   .card h4 {
+       font-size: 1.3rem;
+   }
+
+   .card p {
+       font-size: 1rem;
+       padding: 0.8em;
+       line-height: 22px;
+   }
+
+ }
+
+ @media (min-width: 930px) and (max-width: 1071px) {
+
+   .overlay a {
+     font-size: 1.5rem;
+     padding: 0.2em;
+     margin: 0.2em;
+   }
+
+   .card h4 {
+       font-size: 1.5rem;
+   }
+
+   .card p {
+       font-size: 1rem;
+       padding: 1em;
+       line-height: 30px;
+   }
+
+  }
+
+  @media (min-width: 1275px) and (max-width: 1439px) {
+
+    .overlay a {
+      font-size: 1.3rem;
+      padding: 0.2em;
+      margin: 0.2em;
+    }
+
+    .card h4 {
+        font-size: 1.3rem;
+    }
+
+    .card p {
+        font-size: 1rem;
+        padding: 0.8em;
+        line-height: 22px;
+    }
+
+  }
 
 @media (min-width: 860px) {
   nav a {
