added a range of media queries for the work section

--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,7 @@ main > p, aside > p {
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 13px;
     background: #2d3436;
+    height: auto;
 }
 
 .card {
@@ -455,13 +456,13 @@ footer p {
 
    .card p {
        font-size: 0.8rem;
-       padding: 0.8em;
+       padding: 0.9em;
        line-height: 20px;
    }
 
  }
 
- @media (min-width: 860px) and (max-width: 930px) {
+ @media (min-width: 850px) and (max-width: 930px) {
 
    .overlay a {
      font-size: 1.3rem;
