--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ nav, footer {
   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
 }
 
+#hamburger-menu {
+  display: none;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -76,7 +80,7 @@ nav {
 .nav-icon {
   padding: 0.5em;
   font-size: 1em;
-  color: Chocolate;
+  color: tomato;
   font-weight: bold;
 }
 
@@ -92,7 +96,7 @@ nav a {
 }
 
 nav a:hover {
-  color: Chocolate;
+  color: tomato;
   text-decoration: none;
   transform: rotate(-15deg);
 }
@@ -129,7 +133,7 @@ header {
   font-size: 60px;
   letter-spacing: .15em;
   font-family: 'Germania one';
-  color: Chocolate;
+  color: tomato;
 }
 
 .coverText > h3 {
@@ -137,7 +141,7 @@ header {
   font-size: 30px;
   /* DEMO-SPECIFIC STYLES */
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
+  border-right: .15em solid tomato; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
@@ -174,7 +178,7 @@ main, aside {
 }
 
 main > h2, aside > h2 {
-  color: Chocolate;
+  color: tomato;
   font-size: 2rem;
   background: rgba(0,0,0,0.7);
   border-radius: 0.15em;
@@ -210,7 +214,7 @@ main > p, aside > p {
 
 .card h4 {
     font-size: 1.1rem;
-    color: Chocolate;
+    color: tomato;
     font-weight: bold;
 }
 
@@ -253,18 +257,18 @@ main > p, aside > p {
   font-size: 1rem;
   padding: 0.2em;
   margin: 0.2em;
-  border: 1px solid Chocolate;
+  border: 1px solid tomato;
   text-decoration: none;
 }
 
 .overlay a:hover {
-  background: Chocolate;
+  background: tomato;
   border: 1px solid aliceblue;
   text-decoration: none;
 }
 
 span {
-  color: Chocolate;
+  color: tomato;
   font-weight: bold;
 }
 
@@ -273,9 +277,9 @@ span {
 }
 
 #scroll {
-  background: Chocolate;
+  background: tomato;
   font-weight: bold;
-  color: rgba(0, 0, 0, 0.8);
+  color: #232323;
   font-size: 35px;
   border-radius: 0.15em;
   padding: 0.3em;
@@ -297,7 +301,6 @@ footer {
   z-index: 1;
   bottom: 0;
   width: 100%;
-  /* background: Chocolate; */
 }
 
  li {
@@ -354,21 +357,165 @@ footer p {
 
 @media only screen and (max-width: 560px) {
 
-  nav a {
-    /* display: block; */
+  /* nav a {
     font-size: 1em;
     padding: 0.2em;
     flex-basis: 0;
     flex-grow: 1;
-  }
+  } */
 
   .nav-icon {
-    /* display: block; */
     font-size: 0.8em;
     padding: 0.2em;
     flex-basis: 0;
     flex-grow: 1;
   }
+#hamburger-menu {
+  display: block;
+}
+
+#normal-menu {
+  display: none;
+}
+
+#menu a {
+  text-decoration: none;
+  color: #232323;
+  transition: color 0.3s ease;
+}
+
+#menu a:hover
+{
+  color: tomato;
+}
+
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 2px;
+  left: 50px;
+
+  z-index: 1;
+
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+  cursor: pointer;
+
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: #cdcdcd;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/*
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
 
   #social {
     font-size: 0.5em;
@@ -553,6 +700,6 @@ footer p {
 }
 
 .scroll-color {
-  color: Chocolate;
+  color: tomato;
   transform: rotate(-15deg);
 }
