--- a/css/style.css
+++ b/css/style.css
@@ -170,8 +170,8 @@ header {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0;
-  min-height: 80vh;
-  background: rgba(0,0,0,0.6);
+  min-height: 60vh;
+  background: rgba(0,0,0,0.65);
 }
 
 main, aside {
@@ -193,6 +193,11 @@ main > p, aside > p {
   font-size: 1rem;
   padding: 0.1em;
   text-align: left;
+}
+
+.project {
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .grid-wrapper {
@@ -274,10 +279,12 @@ span {
 }
 
 .skilled {
-  min-height: 55vh;
+  min-height: 50vh;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
-#scroll {
+#scroll, #project-work {
   background: tomato;
   font-weight: bold;
   color: #232323;
@@ -287,14 +294,18 @@ span {
   letter-spacing: 0.2em;
 }
 
-.skill {
-  font-size: 70px;
-  padding: 5px;
+.skillful {
+  display: inline-block;
+  padding: 10px;
 }
 
 .img-skill {
-  width: 70px;
-  padding: 5px;
+  display: inline-block;
+  width: 60px;
+}
+
+.skill {
+  font-size: 60px;
 }
 
 footer {
@@ -540,9 +551,17 @@ footer p {
       font-size: 1rem;
       padding: 1em;
   }
+
+  .coverText > h1 {
+    font-size: 45px;
+  }
+
+  .coverText > h3 {
+    font-size: 25px;
+  }
 }
 
-@media (min-width: 560px) and (max-width: 860px) {
+@media (min-width: 360px) and (max-width: 660px) {
 
   nav a {
     /* display: block; */
@@ -567,10 +586,47 @@ footer p {
   .skilled {
     min-height: 60vh;
   }
+
+  .overlay a {
+    font-size: 1.1rem;
+    padding: 0.2em;
+    margin: 0.2em;
+  }
+
+  .card h4 {
+      font-size: 1.2rem;
+  }
+
+  .card p {
+      font-size: 0.8rem;
+      padding: 1em;
+      line-height: 20px;
+  }
 }
 
-@media (min-width: 560px) and (max-width: 715px) {
+@media (min-width: 500px) and (max-width: 600px) {
+  .overlay a {
+    font-size: 1.5rem;
+    padding: 0.2em;
+    margin: 0.2em;
+  }
 
+  .card h4 {
+      font-size: 1.5rem;
+  }
+
+  .card p {
+      font-size: 1.1rem;
+      padding: 1em;
+      line-height: 28px;
+  }
+
+  .skilled {
+    min-height: 80vh;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 700px) {
   .overlay a {
     font-size: 1.7rem;
     padding: 0.2em;
@@ -582,32 +638,22 @@ footer p {
   }
 
   .card p {
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       padding: 1em;
       line-height: 30px;
   }
 
- }
+  .skilled {
+    min-height: 60vh;
+  }
+}
 
- @media (min-width: 715px) and (max-width: 720px) {
+@media (min-width: 700px) and (max-width: 900px) {
 
-   .overlay a {
-     font-size: 1rem;
-     padding: 0.2em;
-     margin: 0.2em;
-   }
-
-   .card h4 {
-       font-size: 1rem;
-   }
-
-   .card p {
-       font-size: 0.8rem;
-       padding: 0.9em;
-       line-height: 15px;
-   }
-
- }
+  .skilled {
+    min-height: 60vh;
+  }
+}
 
  @media (min-width: 850px) and (max-width: 930px) {
 
@@ -625,6 +671,10 @@ footer p {
        font-size: 1rem;
        padding: 0.8em;
        line-height: 20px;
+   }
+
+   .skilled {
+     min-height: 60vh;
    }
 
  }
